# tp4

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci-cd--tp4.yml
src/: main_windows.py  messages.json  styles.css
src/domain/: constants.py  utils.py
